Fixed overflow of code blocks

--- a/public/stylesheets/spectacle.css
+++ b/public/stylesheets/spectacle.css
@@ -1068,7 +1068,8 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
       width: 100%; }
     #spectacle article code {
       font-size: 0.9em;
-      border-radius: 3px; }
+      border-radius: 3px;
+      overflow-wrap: break-word; }
     #spectacle article p:last-child:first-child {
       margin-bottom: 0; }
     #spectacle article h1 {
